fixed care center spacing

--- a/html5up-astral/assets/css/main.css
+++ b/html5up-astral/assets/css/main.css
@@ -191,102 +191,102 @@
 	}
 
 	.\31 1u, .\31 1u\24 {
-		width: 91.6666666667%;
-		clear: none;
-		margin-left: 0;
-	}
-
-	.\31 0u, .\31 0u\24 {
-		width: 83.3333333333%;
-		clear: none;
-		margin-left: 0;
-	}
-
-	.\39 u, .\39 u\24 {
 		width: 75%;
 		clear: none;
 		margin-left: 0;
 	}
 
-	.\38 u, .\38 u\24 {
-		width: 66.6666666667%;
-		clear: none;
-		margin-left: 0;
-	}
-
-	.\37 u, .\37 u\24 {
-		width: 58.3333333333%;
-		clear: none;
-		margin-left: 0;
-	}
-
-	.\36 u, .\36 u\24 {
+	.\31 0u, .\31 0u\24 {
 		width: 50%;
 		clear: none;
 		margin-left: 0;
 	}
 
-	.\35 u, .\35 u\24 {
-		width: 41.6666666667%;
+	.\39 u, .\39 u\24 {
+		width: 25%;
+		clear: none;
+		margin-left: 0;
+	}
+/*
+	.\38 u, .\38 u\24 {
+		width: 50%;
 		clear: none;
 		margin-left: 0;
 	}
 
-	.\34 u, .\34 u\24 {
-		width: 33.3333333333%;
+	.\37 u, .\37 u\24 {
+		width: 37.5%;
 		clear: none;
 		margin-left: 0;
 	}
 
-	.\33 u, .\33 u\24 {
+	.\36 u, .\36 u\24 {
 		width: 25%;
 		clear: none;
 		margin-left: 0;
 	}
 
+	.\35 u, .\35 u\24 {
+		width: 12.5%;
+		clear: none;
+		margin-left: 0;
+	}
+/*
+	.\34 u, .\34 u\24 {
+		width: 50%;
+		clear: none;
+		margin-left: 0;
+	}
+
+	.\33 u, .\33 u\24 {
+		width: 37.5%;
+		clear: none;
+		margin-left: 0;
+	}
+
 	.\32 u, .\32 u\24 {
-		width: 16.6666666667%;
+		width: 25%;
 		clear: none;
 		margin-left: 0;
 	}
 
 	.\31 u, .\31 u\24 {
-		width: 8.3333333333%;
+		width: 12.5%;
 		clear: none;
 		margin-left: 0;
-	}
+	} */
 
 	.\31 2u\24 + *,
 	.\31 1u\24 + *,
 	.\31 0u\24 + *,
 	.\39 u\24 + *,
-	.\38 u\24 + *,
+/*	.\38 u\24 + *,
 	.\37 u\24 + *,
 	.\36 u\24 + *,
 	.\35 u\24 + *,
 	.\34 u\24 + *,
 	.\33 u\24 + *,
 	.\32 u\24 + *,
-	.\31 u\24 + * {
+	.\31 u\24 + * */{
 		clear: left;
 	}
 
 	.\-11u {
-		margin-left: 91.66667%;
+		margin-left: 100%;
 	}
 
 	.\-10u {
-		margin-left: 83.33333%;
-	}
-
-	.\-9u {
 		margin-left: 75%;
 	}
 
-	.\-8u {
-		margin-left: 66.66667%;
+	.\-9u {
+		margin-left: 50%;
 	}
 
+	.\-8u {
+		margin-left: 25%;
+	}
+/*
 	.\-7u {
 		margin-left: 58.33333%;
 	}
@@ -313,7 +313,7 @@
 
 	.\-1u {
 		margin-left: 8.33333%;
-	}
+	}*/
 
 	@media screen and (min-width: 737px) {
 
@@ -1833,6 +1833,6 @@
 		font-size: 1em;
 	}
 	 .row i {
-	 	text-indent: 0.5em;
+	 	text-indent: 0.1em;
 	 }
 
